--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.8.1",
     "axios": "^0.19.2",
+    "date-fns": "^2.10.0",
     "immer": "^6.0.1",
     "polished": "^3.4.4",
     "prop-types": "^15.7.2",
