--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -203,9 +203,10 @@ task copyDownloadableDepsToLibs(type: Copy) {
 }
 
 project.ext.vectoricons = [
-  iconFontNames = [ 'MaterialIcons.ttf']
+  iconFontNames: [ 'MaterialIcons.ttf' ]
 ]
-apply from: "../../node_modules/react-native-vector-iconsfonts.gradle";
+
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
